--- a/package.json
+++ b/package.json
@@ -10,18 +10,28 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^10.17.9",
+    "lucide-react": "^0.307.0",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "pdfjs": "^2.5.0",
     "pdfjs-dist": "^3.7.107",
     "react": "^18",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "react-frame-component": "^5.2.6",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
-    "tailwind-scrollbar": "^3.0.5"
+    "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
