--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.0.1",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^10.17.9",
@@ -29,11 +28,10 @@
     "react-frame-component": "^5.2.6",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
-    "tailwind-merge": "^2.2.0",
-    "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,7 +39,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
