--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-pdf/renderer": "^3.1.14",
     "@reduxjs/toolkit": "^2.0.1",
     "class-variance-authority": "^0.7.0",
